--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,11 +3,15 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 1,
             "patches": [
                 {
                     "date": 1743512635553,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1743515126812,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,10 @@\n # Dependencies\n node_modules\n /.pnp\n .pnp.js\n+.lh\n+.history\n \n # Testing\n /coverage\n \n"
                 }
             ],
             "date": 1743512635553,
