--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@coze/api": "^1.1.1",
+    "@types/jspdf": "^1.3.3",
     "antd": "5.10.0",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
@@ -11,6 +12,7 @@
     "express": "^4.18.2",
     "framer-motion": "^11.9.0",
     "html-to-image": "^1.11.11",
+    "jspdf": "^3.0.1",
     "puppeteer": "^24.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
