--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "framer-motion": "^11.9.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^3.0.1",
+    "katex": "^0.16.21",
     "puppeteer": "^24.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "4.11.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.10.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
