--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.9.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "katex": "^0.16.21",
     "puppeteer": "^24.5.0",
     "react": "^18.2.0",
